--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,95 @@
-// app global css in SCSS form
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+  border: 2px solid #f1f1f1;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+.form-basic {
+  width: 900px;
+  max-width: 99%;
+}
+.no-spinners::-webkit-outer-spin-button,
+.no-spinners::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.no-spinners {
+  -moz-appearance: textfield;
+}
+.no-resize {
+  resize: none !important;
+}
+.background-auth {
+  background-image: url('/images/background/bg-auth.jpg');
+  background-position: center;
+  background-size: cover;
+}
+.container-view {
+  height: 100vh;
+}
+.form-auth {
+  width: 500px;
+  max-width: 96%;
+  border-radius: 3px;
+}
+.capitalize {
+  text-transform: lowercase;
+
+  &::first-letter {
+    text-transform: uppercase;
+  }
+}
+.input-divider {
+  width: 49%;
+}
+.opacity-50 {
+  opacity: 0.5;
+}
+.opacity-30 {
+  opacity: 0.3;
+}
+.text-column {
+  max-width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.main-scroll {
+  height: calc(100vh - 106px);
+}
+.bg-contabilidade {
+  background-color: #660000;
+  color: #fff;
+}
+.active-option-menu {
+  background-color: #660000;
+  color: #fff;
+}
+.border-form {
+  border: 1px solid rgb(200, 200, 200);
+  border-radius: 5px;
+}
+
+.border-top {
+  border-top: 1px solid rgb(200, 200, 200);
+}
+.border-bottom {
+  border-bottom: 1px solid rgb(200, 200, 200);
+}
+
+.hover {
+  transition: opacity 0.3s;
+
+  &:hover {
+    opacity: 0.5;
+  }
+}
